fix: center alignment

--- a/src/components/css/nav-right.css
+++ b/src/components/css/nav-right.css
@@ -2,6 +2,7 @@
   display: inline-flex;
   align-content: center;
   justify-content: center;
+  align-items: center;
   margin: 0 0.5rem;
   border-bottom: 2px solid transparent;
 }
